Fixed off centered components

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,19 +16,16 @@ h1 {
 
 #app {
   position: absolute;
-  padding-top: 4rem;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 33.3rem;
-  height: 100%;
 }
 
 .display-container {
   position: relative;
   background-color: #f4f4f4;
   height: 180px;
-  width: 90%;
+  width: 100%;
   margin-bottom: 1rem;
 }
 
@@ -45,7 +42,7 @@ h1 {
   color: white;
   background: black;
   border: none;
-  width: 90%;
+  width: 100%;
   height: 4rem;
 }
 
